--- a/src/AppBundle/Resources/views/Cart/review-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/review-order.html.twig
@@ -15,7 +15,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-12">
-
+                            Shipping:
                         </div>
                     </div>
                     <div class="row">
