--- a/src/AppBundle/Resources/views/Cart/review-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/review-order.html.twig
@@ -90,7 +90,7 @@
                             </div>
                             <div style="display: inline-flex;">
                                 <input style="height: 45px; font-size: 18px !important; text-align: center;"
-                                       ng-model="requester_name" class="form-control"
+                                       ng-model="requester_first_name" class="form-control"
                                        ng-change="updateRequesterName(requester_name)"></input>
                                 <input style="height: 45px; font-size: 18px !important; text-align: center;"
                                        ng-model="requester_last_name" class="form-control"
@@ -168,7 +168,7 @@
             $scope.numItems = 0;
             $scope.cart = [];
             $scope.products = [];
-            $scope.requester_name = "First Name";
+            $scope.requester_first_name = "First Name";
             $scope.requester_last_name = "Last Name";
 
 
@@ -183,7 +183,8 @@
                         $scope.cart = data.cart;
                         $scope.numItems = data.num_items;
                         $scope.notes = data.cart_notes;
-
+                        $scope.requester_first_name = data.requester_first_name;
+                        $scope.requester_last_name = data.requester_last_name;
                         console.log($scope.cart);
                     });
                 }
