After the user has submitted the completed order, they should have a button or a link to return to the home page so that they can immediately place another order.  (or this can just be a redirect).

--- a/src/AppBundle/Resources/views/Cart/view-all-orders.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-orders.html.twig
@@ -16,6 +16,15 @@
 {% endblock page_name %}
 
 {% block content %}
+    <div class="row" style="margin-bottom: 30px;">
+        <div class="col-md-12">
+            <center>
+                <a class="btn btn-lg btn-primary" href="/">
+                    Submit Another Order
+                </a>
+            </center>
+        </div>
+    </div>
     <div class="row">
         <div id="submitted" class="col-md-6">
             <div class="stats-overview stat-block">
