Remove the “show 10 / 100” boxes and set the system to default to “show all” on all pages

--- a/src/AppBundle/Resources/views/Part/index.html.twig
+++ b/src/AppBundle/Resources/views/Part/index.html.twig
@@ -52,7 +52,9 @@
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable();
+            $('#part-table').DataTable({
+                paging: false
+            });
         });
     </script>
 {% endblock footer %}
