--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -69,7 +69,9 @@ All Registered Users
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable();
+            $('#part-table').DataTable({
+                paging: false
+            });
         });
     </script>
 {% endblock footer %}
