--- a/src/AppBundle/Resources/views/Group/list.html.twig
+++ b/src/AppBundle/Resources/views/Group/list.html.twig
@@ -19,7 +19,9 @@
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable();
+            $('#part-table').DataTable({
+                paging: false
+            });
         });
     </script>
 {% endblock footer %}
