--- a/src/AppBundle/Resources/views/Partcategory/index.html.twig
+++ b/src/AppBundle/Resources/views/Partcategory/index.html.twig
@@ -47,7 +47,9 @@
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable();
+            $('#part-table').DataTable({
+                paging: false
+            });
         });
     </script>
 {% endblock footer %}
