When Uster is reviewing an order, in the Ship QTY and BO QTY fields, remove the arrows, and make those fields just a number that will be typed in.

--- a/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
@@ -45,6 +45,12 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-8">
+                        {{ form_label(form.password) }}
+                        {{ form_widget(form.password) }}
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         {{ form_label(form.office) }}
                         {{ form_widget(form.office) }}
