--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -75,10 +75,10 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <input ng-model="item.ship_quantity" type="number" class="form-control line-number" ng-change="updateProduct(item)" maxlength="2" style="width: 55px;">
+                                            <input ng-model="item.ship_quantity" class="form-control line-number" ng-change="updateProduct(item)" maxlength="2" style="width: 55px;">
                                         </td>
                                         <td>
-                                            <input ng-model="item.back_order_quantity" type="number" class="form-control line-number" ng-change="updateProduct(item)" maxlength="2" style="width: 55px;">
+                                            <input ng-model="item.back_order_quantity" class="form-control line-number" ng-change="updateProduct(item)" maxlength="2" style="width: 55px;">
                                         </td>
                                         <td>
                                             <center>
