In the admin menu, please remove the “Send User Invite” section entirely.

--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -141,10 +141,10 @@
                                             Registered
                                             Users</a>
                                     </li>
-                                    <li {% if app.request.get('_route') == 'send_invitation' %} class="active"{% endif %}>
-                                        <a href="{{ path('send_invitation') }}"><i class="fa fa-user"></i> Send User
-                                            Invite</a>
-                                    </li>
+                                    {#<li {% if app.request.get('_route') == 'send_invitation' %} class="active"{% endif %}>#}
+                                    {#<a href="{{ path('send_invitation') }}"><i class="fa fa-user"></i> Send User#}
+                                    {#Invite</a>#}
+                                    {#</li>#}
 
 
                                 </ul>
