--- a/src/AppBundle/Resources/views/Cart/review-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/review-order.html.twig
@@ -91,7 +91,7 @@
                             <div style="display: inline-flex;">
                                 <input style="height: 45px; font-size: 18px !important; text-align: center;"
                                        ng-model="requester_first_name" class="form-control"
-                                       ng-change="updateRequesterName(requester_name)"></input>
+                                       ng-change="updateRequesterName(requester_first_name)"></input>
                                 <input style="height: 45px; font-size: 18px !important; text-align: center;"
                                        ng-model="requester_last_name" class="form-control"
                                        ng-change="updateRequesterLastName(requester_last_name)"></input>
