In the admin menu, please remove the “Send User Invite” section entirely.

--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -100,7 +100,9 @@
                                             </div>
                                             <hr>
                                             <address>
-                                                <strong>{{ shipping }}</strong>
+                                                {% if shipping %}
+                                                    Shipping: <strong>{{ shipping }}</strong><br>
+                                                {% endif %}
                                                 <strong>{{ user.firstName }} {{ user.lastName }}</strong><br>
                                                 <a href="mailto:{{ user.email }}"
                                                    style="color: #e2001a;">{{ user.email }}</a>
