--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -43,7 +43,7 @@
                                     <th>SHIP QTY</th>
                                     <th>B.O. QTY</th>
                                     <th>Stock Location</th>
-                                    <th>NOTES</th>
+                                    <th>Uster NOTES</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -142,7 +142,7 @@
                                     <div class="col-md-4 col-xs-12">
                                         <div class="well">
                                             <div class="numbers">
-                                                Order Notes
+                                                USDA Notes
                                             </div>
                                             <hr>
                                             <address>
