--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -69,9 +69,7 @@ All Registered Users
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable({
-                paging: false
-            });
+            $('#part-table').DataTable();
         });
     </script>
 {% endblock footer %}
