--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -42,7 +42,7 @@
                                     <th>QTY</th>
                                     <th>SHIP QTY</th>
                                     <th>B.O. QTY</th>
-                                    <th>Notes</th>
+                                    <th>Uster Notes</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -120,7 +120,7 @@
                                     <div class="col-md-4 col-xs-12">
                                         <div class="well">
                                             <div class="numbers">
-                                                Order Notes
+                                                USDA Notes
                                             </div>
                                             <hr>
                                             <address>
