--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -43,7 +43,7 @@
                                     <th>SHIP QTY</th>
                                     <th>B.O. QTY</th>
                                     <th>Stock Location</th>
-                                    <th>Uster NOTES</th>
+                                    <th>Uster Notes</th>
                                 </tr>
                                 </thead>
                                 <tbody>
