--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -144,7 +144,7 @@
                                                 {{ item.office_name ? item.office_name : ' ' }}
                                             </td>
                                             <td>
-                                                {{ item.submitted_by }}
+                                                {{ item.submitted_by ? item.submitted_by : ' ' }}
                                             </td>
                                             <td>
                                                 <center>
@@ -214,7 +214,7 @@
                                                 {{ item.office_name ? item.office_name : ' ' }}
                                             </td>
                                             <td>
-                                                {{ item.submitted_by }}
+                                                {{ item.submitted_by ? item.submitted_by : ' ' }}
                                             </td>
                                             <td>
                                                 {{ item.approved_by }}
