--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -125,6 +125,8 @@
                                             </div>
                                             <hr>
                                             <address>
+                                                Requested By: <strong>{{ requested_by }}</strong><br>
+                                                Account Name:
                                                 <strong>{{ user.firstName }} {{ user.lastName }}</strong><br>
                                                 <a href="mailto:{{ user.email }}"
                                                    style="color: #e2001a;">{{ user.email }}</a>
