Finishing up validation and adding order number.

--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -20,7 +20,7 @@
                     <div class="details">
 
                         <div class="numbers">
-                            ORDER
+                            ORDER #{{ cart.orderNumber }}
                         </div>
                         <hr>
                         <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
